--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,30 @@
-[tool.poetry]
+[project]
 name = "eliona.api_client2"
 version = "2.9.5"
 description = "Eliona REST API"
-authors = ["Eliona by IoTEC AG <hello@eliona.io>"]
+authors = [
+  {name = "Eliona by IoTEC AG",email = "hello@eliona.io"},
+]
 license = "MIT License"
 readme = "README.md"
-repository = "https://github.com/eliona-smart-building-assistant/python-eliona-api-client2"
 keywords = ["OpenAPI", "OpenAPI-Generator", "Eliona REST API"]
-include = ["eliona.api_client2/py.typed"]
+requires-python = ">=3.9"
 
-[tool.poetry.dependencies]
-python = "^3.9"
+dependencies = [
+  "urllib3 (>=2.1.0,<3.0.0)",
+  "python-dateutil (>=2.8.2)",
+  "pydantic (>=2)",
+  "typing-extensions (>=4.7.1)",
+  "lazy-imports (>=1,<2)"
+]
 
-urllib3 = ">= 2.1.0, < 3.0.0"
-python-dateutil = ">= 2.8.2"
-pydantic = ">= 2"
-typing-extensions = ">= 4.7.1"
+[project.urls]
+Repository = "https://github.com/eliona-smart-building-assistant/python-eliona-api-client2"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry]
+requires-poetry = ">=2.0"
+
+[tool.poetry.group.dev.dependencies]
 pytest = ">= 7.2.1"
 pytest-cov = ">= 2.8.1"
 tox = ">= 3.9.0"
